--- a/build-code-samples/tasks/main.yml
+++ b/build-code-samples/tasks/main.yml
@@ -1,2 +1,9 @@
 ---
 # tasks file for build-code-samples
+
+- name: Copying the code samples to /tmp
+  copy:
+   file: 
+
+- name: Running ./configure && make && make install
+  shell: 
